[[bin]]
name = "day-01"
path = "src/day-01/main.rs"

[[bin]]
name = "day-02"
path = "src/day-02/main.rs"

[[bin]]
name = "day-03"
path = "src/day-03/main.rs"

[[bin]]
name = "day-04"
path = "src/day-04/main.rs"

[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = { version = "1.0.3", optional = false }
either = { version = "1.9.0", optional = false }
divrem = { version = "1.0.0", optional = false }
grid = { version = "0.12.0", optional = false }
gridit = { version = "0.1.0", optional = false }
indexmap = { version = "2.1.0", optional = false }
indextree = { version = "4.6.0", optional = false }
itertools = { version = "0.12.0", optional = false }
linked_hash_set = { version = "0.1.4", optional = false }
nom = { version = "7.1.3", optional = false }
pathfinding = { version = "4.3.2", optional = false }
petgraph = { version = "0.6.4", optional = false }
serde_json = { version = "1.0.108", optional = false }
